# nova-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  langgraph.json  memory.md  plan.py  pyproject.toml  test_groq_integration.py
notebooks/: memory_agent.ipynb
src/: studio.py
src/adapters/llm_providers/: groq.py
src/adapters/memory/: in_memory_adapter.py  mock_memory.py
src/adapters/tools/: mock_tool.py
src/application/services/: chat_service.py  intent_detector.py  langgraph_orchestrator.py  llm_node.py  memory_recall_node.py  memory_write_node.py
src/application/services/nodes/: final_output_node.py  intent_detector.py  llm_node.py  memory_gate_node.py  memory_recall_node.py  memory_write_node.py
src/application/services/tools/: __init__.py  multiply_tool.py  summarizer_tool.py
src/application/usecases/: chat_service.py  handle_user_prompt.py
src/core/entities/: agent_state.py  chat_message.py
src/core/parsers/: think_cleaner_parser.py
src/core/policies/: safety_policy.py
src/core/ports/: executor_port.py  llm_client_port.py  memory_port.py  planner_port.py
src/domain/entities/: agent_state.py  plan.py
src/domain/ports/: llm_client_port.py  memory_port.py
src/infrastructure/: config.py  di.py  memory_di.py
src/infrastructure/adapters/llm_providers/: groq.py
src/infrastructure/adapters/memory/: in_memory_adapter.py
src/infrastructure/interfaces/api/: endpoints.py
src/infrastructure/interfaces/cli/: chat_interface.py
src/interfaces/api/: endpoints.py  fastapi_app.py
src/interfaces/cli/: __init__.py  chat_interface.py
src/nova_agent/: __init__.py  config.py  main.py
src/nova_agent/application/: __init__.py
src/nova_agent/application/dto/: __init__.py  create_agent_dto.py  update_agent_dto.py
src/nova_agent/application/services/: __init__.py  event_publisher.py
src/nova_agent/application/use_cases/: __init__.py  create_agent.py  get_agent.py  update_agent.py
src/nova_agent/domain/: __init__.py
src/nova_agent/domain/entities/: __init__.py  agent.py
src/nova_agent/domain/events/: __init__.py  agent_created.py  agent_updated.py
src/nova_agent/domain/exceptions/: __init__.py  agent_not_found.py  invalid_agent_status.py
src/nova_agent/domain/value_objects/: __init__.py  agent_config.py
src/nova_agent/infrastructure/: __init__.py
src/nova_agent/infrastructure/api/: __init__.py  endpoints.py
src/nova_agent/infrastructure/database/: __init__.py  models.py  repositories.py
src/nova_agent/infrastructure/events/: __init__.py  handlers.py
src/nova_agent/infrastructure/llm/: __init__.py  groq_client.py
src/nova_agent/infrastructure/llm_providers/: groq_client.py
src/nova_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_example_agent_api.py
tests/integration/: test_end_to_end.py
tests/unit/: test_handle_user_prompt.py
